<resources>
    <string name="app_name">MHat shop</string>
    <string name="hat_name">Nón lưỡi trai</string>
    <string name="hatCost">đ250000</string>
    <string name="hatName">Tên sản phẩm</string>
    <string name="addCart">Thêm vào giỏ hàng</string>
    <string name="hatDescribe">Mô tả chi tiết sản phẩm</string>
    <string name="describeExample">Màu sắc \n Số lương \n Giới tính</string>
    <string name="todo">TODO</string>
    <string name="cartShopping">Giỏ hàng</string>
    <string name="totalTitle">Tổng tiền:</string>
    <string name="total">50.000 đ</string>
    <string name="buttonPurchaseContent">Mua hàng</string>
    <string name="emptyCart">Giỏ hàng trống</string>
    <string name="itemCartCost">15,000đ</string>
    <string name="productCartQuantity">1</string>
    <string name="phoneNumber">0948915051</string>
    <string name="email">nguyenthaitruong.entertainment@gmail.com</string>
    <string name="addressFieldHint">Nhập địa chỉ giao hàng</string>
    <string name="orderBtn">Đặt hàng</string>
    <string name="zaloPayButton">Đặt hàng và thanh toán bằng zalo pay</string>
    <string name="icSearchDescription">Tìm kiếm sản phẩm</string>
    <string name="searchEditTextHint">Nhập sản phẩm cần tìm</string>
    <string name="login">Đăng nhập</string>
    <string name="emailTitle">Email</string>
    <string name="passwordTitle">Mật khẩu</string>
    <string name="noAccountTitle">Nếu chưa có tài khoản</string>
    <string name="register">Đăng ký</string>
    <string name="aldreadyAccountTitle">Đã có tài khoản</string>
    <string name="rePasswordTitle">Nhập lại mật khẩu</string>
    <string name="mobileTitle">Số điện thoại</string>
    <string name="usernameTitle">Họ và tên</string>
    <string name="appName">Chào ADMIN</string>
    <string name="defaultQuantity">1</string>
    <string name="orderId">Đơn hàng: 123</string>
    <string name="quantity">x2</string>
    <string name="totalCost">Thành tiền: đ20.000</string>
    <string name="totalItems">1 sản phẩm</string>
    <string name="orderStatus">Chờ xác nhận</string>
    <string name="forgetPassword">Quên mật khẩu</string>
    <string name="newProducts">Sản phẩm mới nhất</string>
    <string name="categoryTitle">Trang chủ</string>
    <string name="productNameHint">Tên sản phẩm</string>
    <string name="productCost">Giá sản phẩm</string>
    <string name="productImageURLHint">Hình ảnh</string>
    <string name="male">Nam</string>
    <string name="female">Nữ</string>
    <string name="unisex">Unisex</string>
    <string name="productColorHint">Màu sắc</string>
    <string name="productQuantityHint">Số lượng</string>
    <string name="saveProductButton">Lưu sản phẩm</string>
    <string name="fixButtonTitle">Sửa</string>
    <string name="deleteButtonTitle">Xóa</string>
    <string name="admin">QUẢN TRỊ</string>
    <string name="productManagerImageDes">Quản lý sản phẩm image</string>
    <string name="userManagerImageDes">Quản lý khách hàng image</string>
    <string name="orderManagerImageDes">Quản lý hóa đơn image</string>
    <string name="reportImageDes">Thống kê image</string>
    <string name="select">year\n</string>
    <string name="createFilePDF">Xuất file pdf</string>
    <string name="addProductBtn">Thêm sản phẩm mới</string>
    <string name="soldQuantity">Đã bán 27.8k</string>
</resources>