<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#03A9F4"
        android:gravity="center"
        android:text="@string/admin"
        android:textColor="#000000"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:weightSum="2"
        android:layout_marginTop="16dp">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:background="@android:color/transparent"
            android:src="@drawable/product"
            android:layout_weight="1"
            android:id="@+id/btnSP"
            android:contentDescription="@string/productManagerImageDes" />

        <ImageButton
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:background="@android:color/transparent"
            android:src="@drawable/user"
            android:id="@+id/btnKH"
            android:contentDescription="@string/userManagerImageDes" />
    </LinearLayout>

    <LinearLayout
        android:weightSum="2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="16dp">

        <ImageButton
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:background="@android:color/transparent"
            android:src="@drawable/hd"
            android:id="@+id/btnDH"
            android:contentDescription="@string/orderManagerImageDes" />

        <ImageButton
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:background="@android:color/transparent"
            android:src="@drawable/thongke"
            android:id="@+id/btnTK"
            android:contentDescription="@string/reportImageDes" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:weightSum="2"
        android:layout_marginTop="16dp">

        <ImageButton
            android:id="@+id/btnViTri"
            android:layout_width="1dp"
            android:layout_height="140dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:contentDescription="@string/productManagerImageDes"
            android:src="@drawable/location" />

        </LinearLayout>

</LinearLayout>