<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ChiTietSanPhamActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#3AD541"
        app:layout_constraintTop_toTopOf="parent"
        app:title="Chi tiết sản phẩm">

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:id="@+id/layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <ImageView
            android:id="@+id/imageChiTiet"
            android:layout_width="150dp"
            android:layout_height="200dp"
            android:src="@drawable/ic_media"
            android:contentDescription="@string/todo" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvTenSanPham"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/hatName"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvGiaSanPham"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:text="@string/hatCost"
                android:textColor="@android:color/holo_red_light"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:text="@string/hatDescribe"
                android:textSize="15sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="5dp"
                android:orientation="horizontal"
                android:weightSum="5">

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:ignore="UselessParent">

                    <TextView
                        android:id="@+id/tvMoTaChiTiet"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:textSize="16sp"
                        android:text="@string/describeExample" />
                </ScrollView>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        app:layout_constraintTop_toBottomOf="@+id/layout1"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical">

        <LinearLayout
            android:weightSum="2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSua"
                android:layout_weight="1"
                android:text="@string/fixButtonTitle"
                android:layout_margin="5dp"
                android:background="@drawable/background_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                tools:ignore="InefficientWeight" />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnXoa"
                android:layout_weight="1"
                android:text="@string/deleteButtonTitle"
                android:layout_margin="5dp"
                android:background="@drawable/background_button"
                android:backgroundTint="@android:color/holo_red_light"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                tools:ignore="InefficientWeight" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>