<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/itemImageChiTietDonHang"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_media" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@id/itemImageChiTietDonHang"
                android:orientation="vertical"
                android:padding="2dp"
                android:weightSum="2">

                <TextView
                    android:id="@+id/itemTenSPChiTietDonHang"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/hat_name"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/itemSoLuongChiTietDonHang"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:text="@string/quantity"
                    android:textSize="15sp"
                    tools:ignore="RtlHardcoded" />

                <TextView
                    android:id="@+id/itemGiaChiTietDonHang"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:text="@string/itemCartCost"
                    android:textSize="15sp"
                    tools:ignore="RtlHardcoded" />
            </LinearLayout>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>