<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/item_san_pham_card_view"
    android:layout_width="160dp"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:elevation="8dp"
    app:cardCornerRadius="4dp"
    android:layout_marginTop="10dp"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <ImageView
                android:id="@+id/item_san_pham_image"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:src="@drawable/ic_media"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/item_ten_san_pham"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:gravity="center"
                android:maxLines="3"
                android:minLines="3"
                android:text="@string/hat_name"
                android:textSize="20sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2"
                >

                <TextView
                    android:id="@+id/item_gia_san_pham"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="start|left"
                    android:text="@string/hatCost"
                    android:textColor="@android:color/holo_red_light"
                    android:textSize="16sp"
                    android:layout_marginStart="2sp"
                    android:textStyle="bold"
                    tools:ignore="RtlHardcoded" />
                <TextView
                    android:id="@+id/item_so_luong_da_ban"
                    android:layout_marginEnd="2dp"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="right|end"
                    android:text="@string/soldQuantity"
                    android:textSize="12sp"
                    tools:ignore="RtlHardcoded" />
            </LinearLayout>
        </LinearLayout>

    </FrameLayout>
</androidx.cardview.widget.CardView>